--- a/style3.css
+++ b/style3.css
@@ -14,11 +14,10 @@ body{
     display: flex;
     justify-content: center;
     margin-top: 4.5rem;
-    background: #D7E3FC;
     border-radius: 30px;
     background-color: #D7E3FC;
     width: 999px;
-    height: 611px;
+    height: auto;
     margin-left: 13rem;
     margin-bottom: 1rem;
     box-shadow: 9px 11px 8px 2px rgba(0, 0, 0, 0.25);
@@ -131,6 +130,7 @@ body{
 .container form .content .pass{
     display: flex;
     flex-direction: column;
+    position: relative;
     margin-top: 1rem;
     width: 762px;
     margin-left: 3rem;
@@ -152,7 +152,7 @@ body{
 .container form .content .conf{
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
+    position: relative;
     width: 762px;
     margin-left: 3rem;
     gap: 5px;
@@ -172,7 +172,8 @@ body{
 }
 .container form .content input.submit{
     margin-left: 3rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     border: 1px solid  #CACACA;
     background: #FFFFFF;
     color: #05419A;
@@ -181,6 +182,11 @@ body{
     width: 112px;
     height: 38px;
     border-radius: 35px;
+}
+.container form .content input.submit:hover{
+    background-color: #82CBFF;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 p{
     display: flex;
@@ -195,4 +201,37 @@ p.w{
     font-family: "Sancreek";
     font-size: 20px;
     justify-content: center;
+}
+.container form .content div>.val{
+    color: tomato;
+    font-weight: 600;
+    margin-top: 5px;
+    padding: 2px;
+}
+.container form .content .conf button{
+    position: absolute;
+    height: auto;
+    top: 51%;
+    right: 1rem;
+    transform: translateY(-50%);
+    background-color: none;
+    border: none;
+    cursor: pointer;
+}
+.container form .content .pass button{
+    position: absolute;
+    height: auto;
+    top: 43%;
+    right: 1rem;
+    transform: translateY(-50%);
+    background-color: none;
+    border: none;
+    cursor: pointer;
+}
+.container form .content .pass button>i{
+    font-size: 1.5rem;
+}
+
+.container form .content .conf button>i{
+    font-size: 1.5rem;
 }
